--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <ion-menu type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title slot="start">Menu</ion-title>
+          <ion-title slot="end">
+            <ion-icon name="person" routerLink="login"></ion-icon>
+          </ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
