--- a/src/app/pages/add-usuario/add-usuario.page.html
+++ b/src/app/pages/add-usuario/add-usuario.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>add-usuario</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Usuário
+    </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
 
 </ion-content>
