--- a/src/app/pages/add-usuario/add-usuario.page.scss
+++ b/src/app/pages/add-usuario/add-usuario.page.scss
@@ -1,11 +1,15 @@
-img{
-    width: 200px;
+.foto img{
     height: 200px;
-    margin: 20px auto;
-    border-radius:50%;
-}
+    border-radius: 0;
+    margin: 5px auto;
+} 
+.slid img{
+    height: 100px;
+    border-radius: 0;
+    margin: 5px auto;
+} 
 
-#map_canvas{
+#map_canvas {
     width: 100%;
-    height: 250px;
+    height: 300px;
 }
