--- a/src/app/pages/list-usuario/list-usuario.page.html
+++ b/src/app/pages/list-usuario/list-usuario.page.html
@@ -1,50 +1,50 @@
 <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>
-        Usuário
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Usuário
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button color="danger" routerLink="/tabs/addUsuario">
-        <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  
-    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-      <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
-  
-    <ion-list *ngIf="usuarios | async as users">
-      <ion-item-sliding *ngFor="let u of users">
-        <ion-item-options side="start">
-          <ion-item-option color="" (click)="editar(u.key)">
-            Atualizar
-          </ion-item-option>
-        </ion-item-options>
-  
-        <ion-item [routerLink]="['/tabs/perfilUsuario/',u.key]">
-          <ion-avatar slot="start">
-            <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-          </ion-avatar>
-          <ion-label>
-            {{u.nome}} - {{u.email}}
-          </ion-label>
-          <ion-note>{{u.key}}</ion-note>
-        </ion-item>
-  
-        <ion-item-options side="end">
-          <ion-item-option color="danger" (click)="remover(u.key)">
-            Delete
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
-  
-    </ion-list>
-  
-  </ion-content>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="danger" routerLink="/addUsuario">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
+  <ion-list *ngIf="usuarios | async as users">
+    <ion-item-sliding *ngFor="let u of users">
+      <ion-item-options side="start">
+        <ion-item-option color="" (click)="editar(u.key)">
+          Atualizar
+        </ion-item-option>
+      </ion-item-options>
+
+      <ion-item [routerLink]="['/perfilUsuario',u.key]">
+        <ion-avatar slot="start">
+          <img src="{{u.foto}}">
+        </ion-avatar>
+        <ion-label>
+          {{u.nome}} - {{u.email}}
+        </ion-label>
+        <ion-note>{{u.key}}</ion-note>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="remover(u.key)">
+          Delete
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+  </ion-list>
+
+</ion-content>
