--- a/src/app/pages/add-produto/add-produto.page.html
+++ b/src/app/pages/add-produto/add-produto.page.html
@@ -1,62 +1,67 @@
 <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>
-        Usuário
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content>
-    <ion-item lines="none" class="foto">
-      <img src="assets/perfil.png" (click)="tirarFoto()" *ngIf="!preview">
-      <img [src]="preview[preview.length - 1]" alt="foto perfil" (click)="tirarFoto()" *ngIf="preview">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Produto :: Formulário
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-item lines="none" class="foto">
+    <img src="assets/perfil.png" (click)="tirarFoto()" *ngIf="!preview">
+    <img [src]="preview[preview.length - 1]" alt="foto perfil" (click)="tirarFoto()" *ngIf="preview">
+  </ion-item>
+
+  <ion-slides pager="true" [options]="slideOpts" *ngIf="preview" class="slid">
+    <ion-slide *ngFor="let foto of preview; let i = index" (click)="removerFoto(i)">
+      <img src="{{foto}}">
+    </ion-slide>
+  </ion-slides>
+
+  <form #fc="ngForm" (ngSubmit)="onsubmit(fc)">
+    <ion-item>
+      <ion-label position="floating">Nome</ion-label>
+      <ion-input type="text" [(ngModel)]="produto.nome" name="nome" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Descrição</ion-label>
+      <ion-input type="text" [(ngModel)]="produto.descricao" name="descricao" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Categoria</ion-label>
+      <ion-select placeholder="Select One" [(ngModel)]="produto.categoria" name="categoria">
+        <ion-select-option value="A">A</ion-select-option>
+        <ion-select-option value="B">B</ion-select-option>
+        <ion-select-option value="C">C</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Quantidade</ion-label>
+      <ion-input type="text" [(ngModel)]="produto.quant" name="quant" required></ion-input>
+    </ion-item>
+    
+    <ion-item>
+      <ion-label position="floating">Valor</ion-label>
+      <ion-input type="text" [(ngModel)]="produto.valor" name="valor" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Ativar produto?</ion-label>
+      <ion-toggle [(ngModel)]="produto.ativo" checked></ion-toggle>
     </ion-item>
   
-    <ion-slides pager="true" [options]="slideOpts" *ngIf="preview" class="slid">
-      <ion-slide *ngFor="let foto of preview; let i = index" (click)="removerFoto(i)">
-        <img src="{{foto}}">
-      </ion-slide>
-    </ion-slides>
-  
-    <form #fc="ngForm" (ngSubmit)="onsubmit(fc)">
-      <ion-item>
-        <ion-label position="floating">Nome</ion-label>
-        <ion-input type="text" [(ngModel)]="usuario.nome" name="nome" required></ion-input>
-      </ion-item>
-  
-      <ion-item>
-        <ion-label position="floating">E-mail</ion-label>
-        <ion-input type="email" [(ngModel)]="usuario.email" name="email" required
-          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" #e="ngModel"></ion-input>
-      </ion-item>
-      <ion-text color="danger" *ngIf="e.invalid && e.dirty">E-mail invalido!</ion-text>
-  
-      <ion-item>
-        <ion-label position="floating">Tel.</ion-label>
-        <ion-input type="tel" [(ngModel)]="usuario.tel" name="tel" required [brmasker]="{phone: true}"></ion-input>
-      </ion-item>
-  
-      <ion-item>
-        <ion-label position="floating">Senha</ion-label>
-        <ion-input type="password" [(ngModel)]="usuario.pws" name="pws" required minlength="7" #p="ngModel"></ion-input>
-      </ion-item>
-      <ion-text color="danger" *ngIf="p.invalid && p.dirty">Senha muito curta!</ion-text>
-  
-      <ion-item>
-        <ion-label position="floating">Confirmar Senha</ion-label>
-        <ion-input type="password" (ngModel)="conf" name="conf" required #c="ngModel"></ion-input>
-      </ion-item>
-      <ion-text color="danger" *ngIf="(p.value != c.value) && c.dirty">Senhas diferentes!</ion-text>
-  
-      <ion-item lines="none">
-        <ion-button type="submit" [disabled]="fc.invalid || (p.value != c.value)">Salvar</ion-button>
-        <ion-button type="reset" color="danger" [routerLink]="['/']">Cancelar</ion-button>
-      </ion-item>
-    </form>
-  
-    <div id="map_canvas"></div>
-  
-  </ion-content>
+    <ion-item lines="none">
+      <ion-button type="submit" [disabled]="fc.invalid ">Salvar</ion-button>
+      <ion-button type="reset" color="danger" routerLink="/">Cancelar</ion-button>
+    </ion-item>
+  </form>
+
+  <div id="map_canvas"></div>
+
+</ion-content>
