--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,16 +9,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="produtos">
-  <ion-card class="welcome-card" *ngFor="let produto of produtos">
-    <img src="produto.foto" alt="" />
-    <ion-card-header>
-      <ion-card-subtitle>{{produto.nome}}</ion-card-subtitle>
-      <ion-card-title>{{produto.descricao}}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <strong color="danger">{{poduto.valor | currency: "BRL"}}</strong>
-    </ion-card-content>
-  </ion-card>
- 
+<ion-content>
+ <h2>
+    Modelos de Codigos
+ </h2> 
 </ion-content>
