--- a/src/app/pages/add-produto/add-produto.page.html
+++ b/src/app/pages/add-produto/add-produto.page.html
@@ -24,12 +24,12 @@
   <form #fc="ngForm" (ngSubmit)="onsubmit(fc)">
     <ion-item>
       <ion-label position="floating">Nome</ion-label>
-      <ion-input type="text" [(ngModel)]="produto.nome" name="nome" required></ion-input>
+      <ion-input type="text" [(ngModel)]="produto.nome" name="nome"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Descrição</ion-label>
-      <ion-input type="text" [(ngModel)]="produto.descricao" name="descricao" required></ion-input>
+      <ion-input type="text" [(ngModel)]="produto.descricao" name="descricao"></ion-input>
     </ion-item>
 
     <ion-item>
@@ -43,23 +43,23 @@
 
     <ion-item>
       <ion-label position="floating">Quantidade</ion-label>
-      <ion-input type="text" [(ngModel)]="produto.quant" name="quant" required></ion-input>
-    </ion-item>
-    
-    <ion-item>
-      <ion-label position="floating">Valor</ion-label>
-      <ion-input type="text" [(ngModel)]="produto.valor" name="valor" required></ion-input>
+      <ion-input type="text" [(ngModel)]="produto.quant" name="quant"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label>Ativar produto?</ion-label>
-      <ion-toggle [(ngModel)]="produto.ativo" checked></ion-toggle>
+      <ion-label position="floating">Valor</ion-label>
+      <ion-input type="text" [(ngModel)]="produto.valor" name="valor"></ion-input>
     </ion-item>
-  
+
     <ion-item lines="none">
+      <ion-label>Ativar produto?</ion-label>
+      <ion-toggle [(ngModel)]="produto.ativo" name="ativo" checked></ion-toggle>
+    </ion-item>
+
+    <section>
       <ion-button type="submit" [disabled]="fc.invalid ">Salvar</ion-button>
       <ion-button type="reset" color="danger" routerLink="/">Cancelar</ion-button>
-    </ion-item>
+    </section>
   </form>
 
   <div id="map_canvas"></div>
