--- a/src/app/pages/list-produto/list-produto.page.html
+++ b/src/app/pages/list-produto/list-produto.page.html
@@ -1,25 +1,26 @@
 <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>
-        Ionic Model :: Cards Produtos
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="danger" routerLink="/addProduto">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-  
-  <ion-content>
-  
-    <ion-row *ngIf="produtos ">
-      <ion-card class="" size="6" *ngFor="let produto of produtos">
-        <img src="produto.foto" alt="" />
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Ionic Model :: Cards Produtos
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button color="danger" routerLink="/addProduto">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+
+<ion-content>
+
+  <ion-row *ngIf="produtos">
+    <ion-col size="6" *ngFor="let produto of produtos">
+      <ion-card class="">
+        <img src="{{produto.foto}}" alt="" />
         <ion-card-header>
           <ion-card-subtitle>{{produto.nome}}</ion-card-subtitle>
           <ion-card-title>{{produto.descricao}}</ion-card-title>
@@ -28,6 +29,6 @@
           <strong color="danger">{{produto.valor | currency: "BRL"}}</strong>
         </ion-card-content>
       </ion-card>
-    </ion-row>
-  
-  </ion-content>
+    </ion-col>
+  </ion-row>
+</ion-content>
